# lettura

./: .gitignore  README.md  run.sh
data/: config.example.toml
front/: package.json  pnpm-lock.yaml  vite.config.ts
front/src/: App.tsx  db.ts  index.tsx
front/src/components/AddFeed/: index.tsx
front/src/components/ArticleItem/: index.tsx
front/src/components/ArticleView/: Detail.tsx  DialogView.tsx  view.module.scss
front/src/components/ArticleView/adpater/: Podcast.tsx
front/src/components/Subscribes/: ItemView.tsx  List.tsx  index.tsx  utilities.ts
front/src/components/WelcomePage/: index.tsx
front/src/components/ui/: switch-3.tsx
front/src/helpers/: busChannel.tsx  dataAgent.ts  domConvter.ts  parseXML.ts  podcastDB.ts  request.ts
front/src/layout/Article/: ArticleCol.tsx  ReadingOptions.tsx  StarAndRead.tsx  View.tsx  index.tsx  useArticle.ts
front/src/layout/Local/: index.tsx
front/src/layout/Search/: Result.tsx  ResultItem.tsx
front/src/layout/Setting/Content/: DataTableToolbar.tsx  DialogDeleteFolder.tsx  DialogEditFeed.tsx  Feed.tsx  FolderList.tsx
front/src/layout/Setting/ImportAndExport/: index.tsx
front/src/layout/Setting/Subscribe/: index.tsx
front/src/stores/: createArticleSlice.ts  createFeedSlice.ts
server/: Cargo.toml
server/src/: config.rs  main.rs
server/src/controller/: app_state.rs  article.rs  custom.rs  feed.rs  mod.rs  search.rs  staticfiles.rs
server/src/mapper/: feed_rs.rs  mod.rs  scraper.rs
server/src/mapper/db/: mod.rs  postgres.rs
server/src/model/: alias.rs  custom.rs  db.rs  dto.rs  mod.rs
server/src/tool/: htmlconverter.rs  marcos.rs  mod.rs  request.rs
