[package]
name = "lettura"
version = "0.1.15"
description = "Your RSS reader"
authors = ["zhanglun1410@gmail.com"]
license = ""
repository = ""
default-run = "lettura"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

reqwest = { version = "0.12.4", features = ["json", "socks", "stream"] }
tokio = { version = "1", features = ["full"] }

chrono = { version = "*", features = ["serde"] }


tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
postgres-types = { version = "0.2" }
deadpool-postgres = { version = "0.13.1" }

uuid = { version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
toml = "0.8.12"
scraper = "0.19.0"
regex = "1"
feed-rs = "1.3.0"
url = { version = "2.5.0", features = ["serde"] }
base64 = "0.22.0"
once_cell = "1.19.0"

tracing-subscriber = "0.3.18"
tracing = "0.1.40"

anyhow = "1.0.83"
async-trait = "0.1.80"
clap = { version = "4.5.4", features = ["derive"] }

strum = { version = "0.26", features = ["derive"] }

tower-http = { version = "0.5.2", features = [
    "cors",
    "trace",
    "set-header",
    "compression-full",
] }

axum = { version = "0.7", features = ["multipart"] }

rust-embed = { version = "^8.3.0", features = ["axum"] }
bytes = { version = "1", features = ["serde"] }

md5 = "0.7.0"
mime_guess = "2.0.4"

chin-tools = { path = "/home/chin/Projects/chin-tools" }
tokio-util = "0.7.11"
futures = "0.3.30"
futures-core = "0.3.30"

[build-dependencies]
static-files = "0.2.3"
